--- a/index.html
+++ b/index.html
@@ -4,307 +4,122 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Victor Licona</title>
-  <meta name="description" content="Victor Licona — Tech, media, and business. Based in Fort Worth, TX." />
+  <meta name="description" content="Victor Licona — student focused on technology, media, and business." />
 
   <style>
-    :root{
-      --bg: #0b0d10;
-      --card: rgba(255,255,255,.06);
-      --card2: rgba(255,255,255,.04);
-      --text: rgba(255,255,255,.92);
-      --muted: rgba(255,255,255,.68);
-      --line: rgba(255,255,255,.12);
-      --shadow: 0 18px 50px rgba(0,0,0,.55);
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
+      background: #f7f9fc;
+      color: #1f2937;
     }
-
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Arial,sans-serif;
-      background:
-        radial-gradient(1200px 700px at 20% 10%, rgba(255,255,255,.10), transparent 55%),
-        radial-gradient(900px 600px at 85% 25%, rgba(255,255,255,.08), transparent 50%),
-        var(--bg);
-      color: var(--text);
-      line-height: 1.5;
-    }
-
-    a{color:inherit}
-    .wrap{
-      max-width: 980px;
+    .container {
+      max-width: 900px;
       margin: 0 auto;
-      padding: 42px 18px 70px;
+      padding: 48px 20px;
     }
-
-    header{
-      display:flex;
-      align-items:flex-start;
-      justify-content:space-between;
-      gap: 16px;
-      padding: 18px 18px 22px;
-      border: 1px solid var(--line);
-      background: linear-gradient(180deg, var(--card), var(--card2));
-      border-radius: 18px;
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(10px);
-    }
-
-    .name{
-      display:flex;
-      flex-direction:column;
-      gap: 8px;
-    }
-
-    h1{
-      margin:0;
-      font-size: 38px;
-      letter-spacing: -0.02em;
-    }
-
-    .subtitle{
-      color: var(--muted);
-      font-size: 15px;
-    }
-
-    .badge-row{
-      display:flex;
-      flex-wrap:wrap;
-      gap:10px;
-      margin-top: 10px;
-    }
-    .badge{
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,.04);
-      padding: 7px 10px;
-      border-radius: 999px;
-      font-size: 13px;
-      color: rgba(255,255,255,.78);
-    }
-
-    .cta{
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-      min-width: 220px;
-      align-items:stretch;
-    }
-    .btn{
-      text-decoration:none;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,.07);
-      padding: 12px 14px;
-      border-radius: 12px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:10px;
-      font-weight: 600;
-      transition: transform .12s ease, background .12s ease, border-color .12s ease;
-    }
-    .btn:hover{
-      transform: translateY(-1px);
-      background: rgba(255,255,255,.12);
-      border-color: rgba(255,255,255,.22);
-    }
-    .btn.primary{
-      background: rgba(255,255,255,.92);
-      color: #0b0d10;
-      border-color: transparent;
-    }
-    .btn.primary:hover{
+    .card {
       background: #ffffff;
-    }
-
-    main{
-      margin-top: 18px;
-      display:grid;
-      grid-template-columns: 1.1fr .9fr;
-      gap: 18px;
-    }
-
-    .card{
-      border: 1px solid var(--line);
-      background: linear-gradient(180deg, var(--card), var(--card2));
-      border-radius: 18px;
-      padding: 18px;
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(10px);
-    }
-
-    .card h2{
-      margin: 0 0 10px 0;
-      font-size: 18px;
-      letter-spacing: -0.01em;
-    }
-    .muted{color: var(--muted)}
-    .list{
-      margin: 12px 0 0 0;
-      padding: 0;
-      list-style: none;
-      display:flex;
-      flex-direction:column;
-      gap: 10px;
-    }
-    .list li{
-      border: 1px solid rgba(255,255,255,.10);
-      background: rgba(255,255,255,.03);
-      padding: 12px;
       border-radius: 14px;
+      padding: 28px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+      margin-bottom: 24px;
     }
-    .list li strong{
-      display:block;
-      font-size: 14px;
-      margin-bottom: 4px;
+    h1 {
+      margin: 0;
+      font-size: 36px;
     }
-    .list li span{
-      color: rgba(255,255,255,.72);
-      font-size: 14px;
+    h2 {
+      margin-top: 0;
+      font-size: 20px;
+      color: #111827;
     }
-
-    .split{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px;
-      margin-top: 12px;
+    .subtitle {
+      color: #6b7280;
+      margin-top: 6px;
     }
-
-    .mini{
-      border: 1px solid rgba(255,255,255,.10);
-      background: rgba(255,255,255,.03);
-      padding: 12px;
-      border-radius: 14px;
+    .row {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      gap: 24px;
     }
-    .mini .k{
-      font-size: 12px;
-      color: rgba(255,255,255,.68);
-      margin-bottom: 6px;
+    ul {
+      padding-left: 18px;
     }
-    .mini .v{
-      font-weight: 700;
-      letter-spacing: -0.01em;
+    li {
+      margin-bottom: 8px;
     }
-
-    footer{
-      margin-top: 18px;
-      display:flex;
-      justify-content:space-between;
-      gap: 12px;
-      flex-wrap: wrap;
-      color: rgba(255,255,255,.55);
-      font-size: 13px;
-      padding: 0 6px;
+    .contact a {
+      display: block;
+      color: #2563eb;
+      text-decoration: none;
+      margin-bottom: 10px;
+      font-weight: 500;
     }
-
-    @media (max-width: 860px){
-      main{grid-template-columns: 1fr}
-      header{flex-direction:column}
-      .cta{width:100%}
+    .contact a:hover {
+      text-decoration: underline;
+    }
+    @media (max-width: 800px) {
+      .row {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="wrap">
-    <header>
-      <div class="name">
-        <h1>Victor Licona</h1>
-        <div class="subtitle">
-          Tech • Media • Business — based in Fort Worth, TX
-        </div>
+  <div class="container">
 
-        <div class="badge-row">
-          <div class="badge">Student</div>
-          <div class="badge">Cybersecurity-focused</div>
-          <div class="badge">Bilingual (EN/ES)</div>
-        </div>
+    <!-- Profile -->
+    <div class="card">
+      <h1>Victor Licona</h1>
+      <div class="subtitle">
+        Student • Technology • Media • Business<br />
+        Fort Worth, Texas
       </div>
+    </div>
 
-      <div class="cta">
-        <a class="btn primary" href="mailto:contact@victorlicona.com">Email: contact@victorlicona.com</a>
-        <a class="btn" href="tel:+12142706884">Call: (214) 270-6884</a>
-        <a class="btn" href="sms:+12142706884">Text Me</a>
-      </div>
-    </header>
+    <!-- About -->
+    <div class="card">
+      <h2>About</h2>
+      <p>
+        I’m a student with a strong interest in technology, media production, and business.
+        I enjoy working on practical projects, learning how systems work, and helping others
+        solve technical problems. This site serves as a central place to learn more about me
+        and how to get in touch.
+      </p>
+    </div>
 
-    <main>
-      <section class="card">
-        <h2>About</h2>
-        <p class="muted" style="margin:0;">
-          I’m Victor — I build and support tech solutions, help with media production, and work on business projects.
-          This site is my hub for what I’m working on and how to reach me.
-        </p>
-
-        <div class="split">
-          <div class="mini">
-            <div class="k">Location</div>
-            <div class="v">Fort Worth, TX</div>
-          </div>
-          <div class="mini">
-            <div class="k">Availability</div>
-            <div class="v">By appointment</div>
-          </div>
-        </div>
-
-        <h2 style="margin-top:16px;">What I’m working on</h2>
-        <ul class="list">
-          <li>
-            <strong>Personal Brand & Portfolio</strong>
-            <span>Projects, experience, and a central place to contact me.</span>
-          </li>
-          <li>
-            <strong>Tech Support & Troubleshooting</strong>
-            <span>Helping people and small teams solve real device, software, and setup problems.</span>
-          </li>
-          <li>
-            <strong>Media / Production</strong>
-            <span>Livestream and church media workflows (cameras, audio, overlays, reliability).</span>
-          </li>
+    <!-- Experience & Skills -->
+    <div class="card row">
+      <div>
+        <h2>What I’m involved in</h2>
+        <ul>
+          <li>Technology support and troubleshooting</li>
+          <li>Media and livestream production</li>
+          <li>Cybersecurity and IT fundamentals</li>
+          <li>Small business and personal projects</li>
         </ul>
-      </section>
+      </div>
 
-      <aside class="card">
+      <div class="contact">
         <h2>Contact</h2>
-        <p class="muted" style="margin:0;">
-          Fastest way to reach me is email or text.
-        </p>
+        <a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a>
+        <a href="tel:+12142706884">(214) 270-6884</a>
+      </div>
+    </div>
 
-        <ul class="list">
-          <li>
-            <strong>Email</strong>
-            <span><a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a></span>
-          </li>
-          <li>
-            <strong>Phone</strong>
-            <span><a href="tel:+12142706884">(214) 270-6884</a></span>
-          </li>
-        </ul>
+    <!-- Footer -->
+    <div class="card">
+      <small>
+        © <span id="year"></span> Victor Licona
+      </small>
+    </div>
 
-        <h2 style="margin-top:16px;">Links</h2>
-        <ul class="list">
-          <li>
-            <strong>TechBuddy</strong>
-            <span><a href="#" title="Add your TechBuddy link here">Add link</a></span>
-          </li>
-          <li>
-            <strong>Resume</strong>
-            <span><a href="#" title="Add a Google Drive / PDF link later">Add link</a></span>
-          </li>
-          <li>
-            <strong>Social</strong>
-            <span><a href="#" title="Add Instagram/LinkedIn later">Add link</a></span>
-          </li>
-        </ul>
-      </aside>
-    </main>
-
-    <footer>
-      <div>© <span id="y"></span> Victor Licona</div>
-      <div class="muted">Built on Vercel</div>
-    </footer>
   </div>
 
   <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
+    document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
