--- a/index.html
+++ b/index.html
@@ -4,122 +4,93 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Victor Licona</title>
-  <meta name="description" content="Victor Licona — student focused on technology, media, and business." />
-
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
-      background: #f7f9fc;
-      color: #1f2937;
-    }
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 48px 20px;
-    }
-    .card {
-      background: #ffffff;
-      border-radius: 14px;
-      padding: 28px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
-      margin-bottom: 24px;
-    }
-    h1 {
-      margin: 0;
-      font-size: 36px;
-    }
-    h2 {
-      margin-top: 0;
-      font-size: 20px;
-      color: #111827;
-    }
-    .subtitle {
-      color: #6b7280;
-      margin-top: 6px;
-    }
-    .row {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      gap: 24px;
-    }
-    ul {
-      padding-left: 18px;
-    }
-    li {
-      margin-bottom: 8px;
-    }
-    .contact a {
-      display: block;
-      color: #2563eb;
-      text-decoration: none;
-      margin-bottom: 10px;
-      font-weight: 500;
-    }
-    .contact a:hover {
-      text-decoration: underline;
-    }
-    @media (max-width: 800px) {
-      .row {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+  <meta name="description" content="Victor Licona — personal website: what I do, what I’m building, and how to contact me." />
+  <link rel="stylesheet" href="./styles.css">
 </head>
-
 <body>
   <div class="container">
-
-    <!-- Profile -->
-    <div class="card">
-      <h1>Victor Licona</h1>
-      <div class="subtitle">
-        Student • Technology • Media • Business<br />
-        Fort Worth, Texas
+    <nav class="nav">
+      <div class="brand">
+        <strong>Victor Licona</strong>
+        <span>Personal HQ • Fort Worth, TX</span>
       </div>
-    </div>
+      <div class="links">
+        <a class="active" href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./work.html">Work</a>
+        <a href="./goals.html">Goals</a>
+        <a href="./contact.html">Contact</a>
+      </div>
+    </nav>
 
-    <!-- About -->
-    <div class="card">
-      <h2>About</h2>
-      <p>
-        I’m a student with a strong interest in technology, media production, and business.
-        I enjoy working on practical projects, learning how systems work, and helping others
-        solve technical problems. This site serves as a central place to learn more about me
-        and how to get in touch.
+    <section class="hero">
+      <h1 class="h1">Hi, I’m Victor.</h1>
+      <p class="sub">
+        I’m a student focused on <b>cybersecurity</b> and I also run projects in <b>tech support</b>, <b>media</b>, and <b>small business</b>.
+        This website is my “LinkedIn-style” hub: what I do, what I’m building, and how to reach me.
       </p>
-    </div>
 
-    <!-- Experience & Skills -->
-    <div class="card row">
-      <div>
-        <h2>What I’m involved in</h2>
-        <ul>
-          <li>Technology support and troubleshooting</li>
-          <li>Media and livestream production</li>
-          <li>Cybersecurity and IT fundamentals</li>
-          <li>Small business and personal projects</li>
+      <div class="badges">
+        <div class="badge">Cybersecurity path (TCC → certs)</div>
+        <div class="badge">TechBuddy by Victor</div>
+        <div class="badge">Church media + worship</div>
+        <div class="badge">Small business projects</div>
+        <div class="badge">Bilingual (EN/ES)</div>
+      </div>
+
+      <div class="btnrow">
+        <a class="btn primary" href="./about.html">Read my story</a>
+        <a class="btn" href="./work.html">See what I do</a>
+        <a class="btn green" href="mailto:contact@victorlicona.com">Email me</a>
+        <a class="btn" href="tel:+12142706884">Call: (214) 270-6884</a>
+      </div>
+    </section>
+
+    <div class="grid">
+      <section class="card">
+        <h2>Snapshot</h2>
+        <ul class="list">
+          <li class="item">
+            <strong>Current focus</strong>
+            <span>Building skills in cybersecurity + real-world tech problem solving.</span>
+          </li>
+          <li class="item">
+            <strong>What I’m known for</strong>
+            <span>Being technical, organized, and serious about results (not just vibes).</span>
+          </li>
+          <li class="item">
+            <strong>What I’m building</strong>
+            <span>TechBuddy by Victor (tech support), plus ongoing media and business projects.</span>
+          </li>
         </ul>
-      </div>
+      </section>
 
-      <div class="contact">
-        <h2>Contact</h2>
-        <a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a>
-        <a href="tel:+12142706884">(214) 270-6884</a>
-      </div>
+      <aside class="card">
+        <h2>Quick contact</h2>
+        <ul class="list">
+          <li class="item">
+            <strong>Email</strong>
+            <span><a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a></span>
+          </li>
+          <li class="item">
+            <strong>Phone</strong>
+            <span><a href="tel:+12142706884">(214) 270-6884</a> • <a href="sms:+12142706884">Text</a></span>
+          </li>
+        </ul>
+        <p class="muted" style="margin-top:12px;">
+          Want to work with me, collaborate, or ask a question? Email or text is fastest.
+        </p>
+      </aside>
     </div>
 
-    <!-- Footer -->
-    <div class="card">
-      <small>
-        © <span id="year"></span> Victor Licona
-      </small>
+    <div class="footer">
+      <div>© <span id="y"></span> Victor Licona</div>
+      <div>Built on Vercel</div>
     </div>
-
   </div>
 
   <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById("y").textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
