--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Victor Licona</title>
-  <meta name="description" content="Victor Licona — personal website: what I do, what I’m building, and how to contact me." />
+  <meta name="description" content="Victor Licona — personal website (LinkedIn-style): what I do, what I'm building, and how to contact me." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -26,66 +26,78 @@
     <section class="hero">
       <h1 class="h1">Hi, I’m Victor.</h1>
       <p class="sub">
-        I’m a student focused on <b>cybersecurity</b> and I also run projects in <b>tech support</b>, <b>media</b>, and <b>small business</b>.
-        This website is my “LinkedIn-style” hub: what I do, what I’m building, and how to reach me.
+        I’m a student focused on <b>cybersecurity</b>, a <b>Certified Apple Computing Advisor</b> at Best Buy,
+        and the <b>founder/owner/operator</b> of <b>TechBuddy by Victor</b> (currently a one-person company).
       </p>
 
       <div class="badges">
-        <div class="badge">Cybersecurity path (TCC → certs)</div>
-        <div class="badge">TechBuddy by Victor</div>
-        <div class="badge">Church media + worship</div>
-        <div class="badge">Small business projects</div>
+        <div class="badge">Cybersecurity path (TCC → certifications)</div>
+        <div class="badge">TechBuddy by Victor (Founder/Owner)</div>
+        <div class="badge">Best Buy (Apple Computing Advisor)</div>
+        <div class="badge">Church media + worship leadership</div>
         <div class="badge">Bilingual (EN/ES)</div>
       </div>
 
       <div class="btnrow">
-        <a class="btn primary" href="./about.html">Read my story</a>
-        <a class="btn" href="./work.html">See what I do</a>
+        <a class="btn primary" href="./work.html">What I do</a>
+        <a class="btn" href="./about.html">About me</a>
         <a class="btn green" href="mailto:contact@victorlicona.com">Email me</a>
-        <a class="btn" href="tel:+12142706884">Call: (214) 270-6884</a>
+        <a class="btn" href="sms:+12142706884">Text: (214) 270-6884</a>
       </div>
     </section>
 
     <div class="grid">
       <section class="card">
-        <h2>Snapshot</h2>
+        <h2>Top skills</h2>
         <ul class="list">
           <li class="item">
-            <strong>Current focus</strong>
-            <span>Building skills in cybersecurity + real-world tech problem solving.</span>
+            <strong>Technical troubleshooting & systems thinking</strong>
+            <span>Diagnose issues fast, isolate root causes, and build repeatable fixes/workflows.</span>
           </li>
           <li class="item">
-            <strong>What I’m known for</strong>
-            <span>Being technical, organized, and serious about results (not just vibes).</span>
+            <strong>Clear communication (bilingual) & customer trust</strong>
+            <span>Explain technical stuff simply, keep people calm, and deliver clean outcomes.</span>
           </li>
           <li class="item">
-            <strong>What I’m building</strong>
-            <span>TechBuddy by Victor (tech support), plus ongoing media and business projects.</span>
+            <strong>Security-minded problem solving</strong>
+            <span>Cybersecurity mindset: safer setups, scam awareness, and privacy-first habits.</span>
           </li>
         </ul>
       </section>
 
       <aside class="card">
-        <h2>Quick contact</h2>
+        <h2>Quick info</h2>
         <ul class="list">
           <li class="item">
-            <strong>Email</strong>
-            <span><a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a></span>
+            <strong>Contact</strong>
+            <span>
+              <a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a><br/>
+              <a href="tel:+12142706884">(214) 270-6884</a> • <a href="sms:+12142706884">Text</a>
+            </span>
           </li>
           <li class="item">
-            <strong>Phone</strong>
-            <span><a href="tel:+12142706884">(214) 270-6884</a> • <a href="sms:+12142706884">Text</a></span>
+            <strong>Social</strong>
+            <span>
+              <a href="#" title="Add your LinkedIn URL here">LinkedIn (placeholder)</a><br/>
+              <a href="#" title="Add your Instagram URL here">Instagram (placeholder)</a>
+            </span>
           </li>
         </ul>
-        <p class="muted" style="margin-top:12px;">
-          Want to work with me, collaborate, or ask a question? Email or text is fastest.
+
+        <hr class="hr"/>
+
+        <p class="muted" style="margin:0;">
+          This site is a clean overview—like LinkedIn, but personal. If you want to collaborate or need help, reach out.
         </p>
       </aside>
     </div>
 
     <div class="footer">
       <div>© <span id="y"></span> Victor Licona</div>
-      <div>Built on Vercel</div>
+      <div class="smalllinks">
+        <a href="./contact.html">Contact</a>
+        <a href="./work.html">Work</a>
+      </div>
     </div>
   </div>
 
