--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About — Victor Licona</title>
-  <meta name="description" content="About Victor Licona — background, interests, and what I’m about." />
+  <meta name="description" content="About Victor Licona — background, mindset, and what I’m about." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav class="nav">
       <div class="brand">
         <strong>Victor Licona</strong>
-        <span>About me</span>
+        <span>About</span>
       </div>
       <div class="links">
         <a href="./index.html">Home</a>
@@ -26,40 +26,39 @@
     <section class="hero">
       <h1 class="h1">About me</h1>
       <p class="sub">
-        I’m Victor Licona, based in Fort Worth, Texas. I’m a student building a career in cybersecurity while staying active in tech, media, and business.
-        I like things that are real, practical, and measurable—systems, troubleshooting, building processes, and getting results.
+        I’m Victor Licona, based in Fort Worth, Texas. I’m building a career in cybersecurity while staying active in hands-on tech work,
+        media production, and leadership in my community.
       </p>
 
       <div class="badges">
-        <div class="badge">Student</div>
-        <div class="badge">Cybersecurity</div>
-        <div class="badge">Tech support</div>
-        <div class="badge">Media production</div>
-        <div class="badge">Entrepreneurship</div>
+        <div class="badge">Cybersecurity-focused</div>
+        <div class="badge">Hands-on tech support</div>
+        <div class="badge">Media + production workflows</div>
+        <div class="badge">Leadership & service</div>
       </div>
     </section>
 
     <div class="grid">
       <section class="card">
-        <h2>How I think</h2>
+        <h2>What drives me</h2>
         <ul class="list">
           <li class="item">
             <strong>Build skills that compound</strong>
-            <span>Cybersecurity fundamentals + real-world problem solving + communication.</span>
+            <span>Cybersecurity fundamentals + real-world troubleshooting + strong communication.</span>
           </li>
           <li class="item">
             <strong>Systems over chaos</strong>
-            <span>I prefer clean processes, checklists, and repeatable workflows.</span>
+            <span>I like clean processes, checklists, and setups that stay reliable.</span>
           </li>
           <li class="item">
-            <strong>Execution matters</strong>
-            <span>Ideas are cool, but shipping and improving is the real flex.</span>
+            <strong>Execution</strong>
+            <span>I’m big on doing the work, improving it, and making results repeatable.</span>
           </li>
         </ul>
       </section>
 
       <aside class="card">
-        <h2>Facts about me</h2>
+        <h2>Quick facts</h2>
         <ul class="list">
           <li class="item">
             <strong>Location</strong>
@@ -70,8 +69,8 @@
             <span>English & Spanish</span>
           </li>
           <li class="item">
-            <strong>Interests</strong>
-            <span>Cybersecurity, business, media production, tech troubleshooting, fitness</span>
+            <strong>Roles</strong>
+            <span>TechBuddy founder/owner • Best Buy Apple advisor • Church media & worship leadership</span>
           </li>
         </ul>
       </aside>
@@ -79,7 +78,10 @@
 
     <div class="footer">
       <div>© <span id="y"></span> Victor Licona</div>
-      <div><a href="./contact.html">Contact</a></div>
+      <div class="smalllinks">
+        <a href="./work.html">What I do</a>
+        <a href="./contact.html">Contact</a>
+      </div>
     </div>
   </div>
 
