--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Work — Victor Licona</title>
-  <meta name="description" content="Victor Licona — businesses, roles, and what I do." />
+  <meta name="description" content="Victor Licona — roles, business, and what I do." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav class="nav">
       <div class="brand">
         <strong>Victor Licona</strong>
-        <span>Work & Roles</span>
+        <span>Work</span>
       </div>
       <div class="links">
         <a href="./index.html">Home</a>
@@ -26,7 +26,7 @@
     <section class="hero">
       <h1 class="h1">What I do</h1>
       <p class="sub">
-        Here’s a full view of what I’m involved in—business projects, leadership roles, and the type of work I like doing.
+        A complete view of my roles, projects, and the kind of work I’m best at.
       </p>
     </section>
 
@@ -34,49 +34,68 @@
       <h2>Business</h2>
       <ul class="list">
         <li class="item">
-          <strong>TechBuddy by Victor</strong>
-          <span>Local/remote tech support for seniors, families, and small businesses. Troubleshooting, setups, scam safety, devices, and smart tech.</span>
-        </li>
-        <li class="item">
-          <strong>Taqueria Luján (family business support)</strong>
-          <span>Helping with operations, expenses tracking, pricing, marketing, and tech setup for the food trailer.</span>
+          <strong>TechBuddy by Victor — Founder / Owner / Operator (one-person company)</strong>
+          <span>
+            Tech support for seniors, families, and small businesses: device setup, troubleshooting, scams & safety,
+            networks, smart home, and general problem solving. Built to be professional, bilingual, and trustworthy.
+          </span>
         </li>
       </ul>
+      <div class="btnrow">
+        <a class="btn" href="#" title="Add your TechBuddy site link if you want">TechBuddy link (optional)</a>
+        <a class="btn green" href="mailto:contact@victorlicona.com">Work with me</a>
+      </div>
     </section>
 
     <div class="grid">
       <section class="card">
-        <h2>Leadership & community</h2>
+        <h2>Professional</h2>
         <ul class="list">
           <li class="item">
-            <strong>Church media & livestream</strong>
-            <span>Running production workflows: cameras, overlays, audio, reliability, and service execution.</span>
+            <strong>Best Buy — Certified Apple Computing Advisor</strong>
+            <span>
+              Apple-focused sales/support experience: customer discovery, recommendations, and helping people get the right setup.
+              Strong emphasis on clarity, confidence, and customer trust.
+            </span>
+          </li>
+        </ul>
+
+        <hr class="hr"/>
+
+        <h2>Community & leadership</h2>
+        <ul class="list">
+          <li class="item">
+            <strong>Church media & livestream production</strong>
+            <span>Cameras, audio, overlays, and reliable service execution—making systems stable and repeatable.</span>
           </li>
           <li class="item">
             <strong>Worship leadership</strong>
             <span>Planning and leading worship in a Spanish-speaking Pentecostal church context.</span>
           </li>
           <li class="item">
-            <strong>Treasurer (church)</strong>
-            <span>Helping manage finances responsibly and organizing systems/tools for tracking.</span>
+            <strong>Church treasurer responsibilities</strong>
+            <span>Helping track finances responsibly and maintain clean systems/tools.</span>
           </li>
         </ul>
       </section>
 
       <aside class="card">
-        <h2>Work style</h2>
+        <h2>How I work</h2>
         <ul class="list">
           <li class="item">
             <strong>Strengths</strong>
-            <span>Tech + operations + leadership, solving real problems, staying organized.</span>
+            <span>Troubleshooting, system setup, workflow improvement, and making things consistent.</span>
           </li>
           <li class="item">
-            <strong>Best at</strong>
-            <span>Troubleshooting, system setup, workflow improvement, making things consistent.</span>
+            <strong>What I value</strong>
+            <span>Reliable results, clean communication, and professional execution.</span>
           </li>
           <li class="item">
-            <strong>Interested in</strong>
-            <span>Cybersecurity, IT, business growth, media systems, automation.</span>
+            <strong>Social</strong>
+            <span>
+              <a href="#" title="Add your LinkedIn URL here">LinkedIn (placeholder)</a><br/>
+              <a href="#" title="Add your Instagram URL here">Instagram (placeholder)</a>
+            </span>
           </li>
         </ul>
       </aside>
@@ -84,7 +103,10 @@
 
     <div class="footer">
       <div>© <span id="y"></span> Victor Licona</div>
-      <div><a href="./contact.html">Contact</a></div>
+      <div class="smalllinks">
+        <a href="./goals.html">Goals</a>
+        <a href="./contact.html">Contact</a>
+      </div>
     </div>
   </div>
 
