--- a/goals.html
+++ b/goals.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Goals — Victor Licona</title>
-  <meta name="description" content="Victor Licona — goals in cybersecurity, business, and personal growth." />
+  <meta name="description" content="Victor Licona — goals across cybersecurity, business, and personal growth." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -26,8 +26,14 @@
     <section class="hero">
       <h1 class="h1">Goals</h1>
       <p class="sub">
-        These are the targets I’m working toward—career, business, and personal development.
+        What I’m building toward in the next chapters: career, business, and personal growth.
       </p>
+
+      <div class="badges">
+        <div class="badge">Cybersecurity</div>
+        <div class="badge">Business systems</div>
+        <div class="badge">Consistency & discipline</div>
+      </div>
     </section>
 
     <div class="grid">
@@ -36,55 +42,62 @@
         <ul class="list">
           <li class="item">
             <strong>Education path</strong>
-            <span>Attend Tarrant County College (TCC) for an Associate’s degree in Cybersecurity, then continue building certifications.</span>
+            <span>Attend Tarrant County College (TCC) for an Associate’s in Cybersecurity, then continue with certifications.</span>
           </li>
           <li class="item">
             <strong>Skill goals</strong>
-            <span>Networking, systems fundamentals, security concepts, hands-on labs, and real-world troubleshooting.</span>
+            <span>Networking fundamentals, system administration basics, security concepts, hands-on labs, and real-world reps.</span>
           </li>
           <li class="item">
             <strong>Work goal</strong>
-            <span>Build experience in IT/security roles while growing technical depth.</span>
+            <span>Build experience in IT/security roles while sharpening depth and professionalism.</span>
           </li>
         </ul>
       </section>
 
       <aside class="card">
-        <h2>Personal growth</h2>
+        <h2>Business (TechBuddy)</h2>
         <ul class="list">
           <li class="item">
-            <strong>Fitness</strong>
-            <span>Consistent gym discipline and long-term body recomposition goals.</span>
+            <strong>Reputation & trust</strong>
+            <span>Be the “go-to” tech person: reliable, clear, bilingual, and safe.</span>
           </li>
           <li class="item">
-            <strong>Faith & leadership</strong>
-            <span>Stay grounded, serve well, and lead with responsibility.</span>
+            <strong>Lead flow</strong>
+            <span>Consistent local leads without relying on luck—systems, reviews, and referrals.</span>
           </li>
           <li class="item">
-            <strong>Focus</strong>
-            <span>Keep building without burning out—structure, habits, and execution.</span>
+            <strong>Operations</strong>
+            <span>Keep everything organized: process, scheduling, documentation, and clean finances.</span>
           </li>
         </ul>
       </aside>
     </div>
 
     <section class="card">
-      <h2>Business goals</h2>
+      <h2>Personal</h2>
       <ul class="list">
         <li class="item">
-          <strong>TechBuddy by Victor</strong>
-          <span>Grow reliable lead flow, strong reputation, and a clear service system that feels professional and trustworthy.</span>
+          <strong>Discipline</strong>
+          <span>Build habits that stick: fitness, learning, and consistent execution.</span>
         </li>
         <li class="item">
-          <strong>Systems & finances</strong>
-          <span>Track money cleanly, run organized operations, and make smart growth moves.</span>
+          <strong>Leadership</strong>
+          <span>Serve well—especially in church responsibilities—and lead with integrity.</span>
+        </li>
+        <li class="item">
+          <strong>Balance without becoming average</strong>
+          <span>Go hard, but stay structured so progress doesn’t collapse.</span>
         </li>
       </ul>
     </section>
 
     <div class="footer">
       <div>© <span id="y"></span> Victor Licona</div>
-      <div><a href="./contact.html">Contact</a></div>
+      <div class="smalllinks">
+        <a href="./work.html">Work</a>
+        <a href="./contact.html">Contact</a>
+      </div>
     </div>
   </div>
 
