--- a/contact.html
+++ b/contact.html
@@ -25,32 +25,47 @@
 
     <section class="hero">
       <h1 class="h1">Contact</h1>
-      <p class="sub">
-        Email or text is the fastest way to reach me.
-      </p>
+      <p class="sub">Email or text is the fastest way to reach me.</p>
 
       <div class="btnrow">
         <a class="btn green" href="mailto:contact@victorlicona.com">contact@victorlicona.com</a>
         <a class="btn" href="tel:+12142706884">Call: (214) 270-6884</a>
         <a class="btn primary" href="sms:+12142706884">Text me</a>
       </div>
+
+      <div class="badges">
+        <div class="badge">For TechBuddy: include device + issue</div>
+        <div class="badge">For collabs: include goal + timeline</div>
+      </div>
     </section>
 
     <section class="card">
-      <h2>What to include in your message</h2>
+      <h2>Message template (copy/paste)</h2>
       <ul class="list">
-        <li class="item"><strong>Who you are</strong><span>Name + best way to contact you back</span></li>
-        <li class="item"><strong>What you need</strong><span>Short summary (problem / opportunity / collaboration)</span></li>
-        <li class="item"><strong>Timeline</strong><span>When you need it</span></li>
+        <li class="item"><strong>Name:</strong><span>…</span></li>
+        <li class="item"><strong>Reason:</strong><span>Tech help / collaboration / question</span></li>
+        <li class="item"><strong>Details:</strong><span>Device + what’s happening (or the project idea)</span></li>
+        <li class="item"><strong>Timeline:</strong><span>When you need it</span></li>
       </ul>
-      <p class="muted" style="margin-top:12px;">
-        If you’re reaching out about TechBuddy services, include the device type and the issue you’re seeing.
+
+      <hr class="hr"/>
+
+      <h2>Social</h2>
+      <p class="muted" style="margin:0;">
+        Add your profiles when you’re ready:
       </p>
+      <div class="btnrow">
+        <a class="btn" href="#" title="Add your LinkedIn URL here">LinkedIn (placeholder)</a>
+        <a class="btn" href="#" title="Add your Instagram URL here">Instagram (placeholder)</a>
+      </div>
     </section>
 
     <div class="footer">
       <div>© <span id="y"></span> Victor Licona</div>
-      <div><a href="./index.html">Home</a></div>
+      <div class="smalllinks">
+        <a href="./index.html">Home</a>
+        <a href="./work.html">Work</a>
+      </div>
     </div>
   </div>
 
