--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Victor Licona</title>
-  <meta name="description" content="Victor Licona — personal website (LinkedIn-style): what I do, what I'm building, and how to contact me." />
+  <meta name="description" content="Victor Licona — personal site: roles, goals, skills, and contact." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -24,57 +24,98 @@
     </nav>
 
     <section class="hero">
-      <h1 class="h1">Hi, I’m Victor.</h1>
-      <p class="sub">
-        I’m a student focused on <b>cybersecurity</b>, a <b>Certified Apple Computing Advisor</b> at Best Buy,
-        and the <b>founder/owner/operator</b> of <b>TechBuddy by Victor</b> (currently a one-person company).
-      </p>
+      <div class="heroTop">
+        <div class="profileRow">
+          <div class="avatar" title="Profile photo placeholder">VL</div>
 
-      <div class="badges">
-        <div class="badge">Cybersecurity path (TCC → certifications)</div>
-        <div class="badge">TechBuddy by Victor (Founder/Owner)</div>
-        <div class="badge">Best Buy (Apple Computing Advisor)</div>
-        <div class="badge">Church media + worship leadership</div>
-        <div class="badge">Bilingual (EN/ES)</div>
+          <div>
+            <h1 class="h1">Victor Licona</h1>
+            <p class="sub">
+              Student (Cybersecurity) • Best Buy <b>Certified Apple Computing Advisor</b> •
+              Founder/Owner/Operator of <b>TechBuddy by Victor</b> (one-person company)
+            </p>
+
+            <div class="metaRow">
+              <div class="pill">
+                <svg class="ico" viewBox="0 0 24 24" fill="none">
+                  <path d="M12 21s7-4.4 7-11a7 7 0 1 0-14 0c0 6.6 7 11 7 11Z" stroke="currentColor" stroke-width="2"/>
+                  <path d="M12 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z" stroke="currentColor" stroke-width="2"/>
+                </svg>
+                Fort Worth, TX
+              </div>
+              <div class="pill">
+                <svg class="ico" viewBox="0 0 24 24" fill="none">
+                  <path d="M4 7h16M4 12h16M4 17h10" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+                Bilingual (EN/ES)
+              </div>
+              <div class="pill">
+                <svg class="ico" viewBox="0 0 24 24" fill="none">
+                  <path d="M4 12l5 5L20 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Security-minded & detail-oriented
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="btnrow">
-        <a class="btn primary" href="./work.html">What I do</a>
-        <a class="btn" href="./about.html">About me</a>
-        <a class="btn green" href="mailto:contact@victorlicona.com">Email me</a>
-        <a class="btn" href="sms:+12142706884">Text: (214) 270-6884</a>
+        <a class="btn primary" href="./work.html">
+          <svg class="ico" viewBox="0 0 24 24" fill="none">
+            <path d="M3 7h18v12H3V7Z" stroke="currentColor" stroke-width="2"/>
+            <path d="M8 7V5h8v2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          What I do
+        </a>
+
+        <a class="btn" href="./about.html">
+          <svg class="ico" viewBox="0 0 24 24" fill="none">
+            <path d="M12 12a4 4 0 1 0-4-4 4 4 0 0 0 4 4Z" stroke="currentColor" stroke-width="2"/>
+            <path d="M4 20a8 8 0 0 1 16 0" stroke="currentColor" stroke-width="2"/>
+          </svg>
+          About
+        </a>
+
+        <a class="btn" href="mailto:contact@victorlicona.com">
+          <svg class="ico" viewBox="0 0 24 24" fill="none">
+            <path d="M4 6h16v12H4V6Z" stroke="currentColor" stroke-width="2"/>
+            <path d="M4 7l8 6 8-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          contact@victorlicona.com
+        </a>
+
+        <a class="btn" href="sms:+12142706884">
+          <svg class="ico" viewBox="0 0 24 24" fill="none">
+            <path d="M21 14a4 4 0 0 1-4 4H8l-5 3V6a4 4 0 0 1 4-4h10a4 4 0 0 1 4 4v8Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+          </svg>
+          Text: (214) 270-6884
+        </a>
       </div>
     </section>
 
     <div class="grid">
       <section class="card">
-        <h2>Top skills</h2>
+        <h2>Top 3 skills</h2>
         <ul class="list">
           <li class="item">
             <strong>Technical troubleshooting & systems thinking</strong>
-            <span>Diagnose issues fast, isolate root causes, and build repeatable fixes/workflows.</span>
+            <span>Fast diagnosis, root-cause mindset, and clean repeatable fixes.</span>
           </li>
           <li class="item">
-            <strong>Clear communication (bilingual) & customer trust</strong>
-            <span>Explain technical stuff simply, keep people calm, and deliver clean outcomes.</span>
+            <strong>Clear communication & customer trust (EN/ES)</strong>
+            <span>I translate complexity into simple steps people can follow.</span>
           </li>
           <li class="item">
             <strong>Security-minded problem solving</strong>
-            <span>Cybersecurity mindset: safer setups, scam awareness, and privacy-first habits.</span>
+            <span>Safer setups, scam awareness, privacy-first habits, and smart defaults.</span>
           </li>
         </ul>
       </section>
 
       <aside class="card">
-        <h2>Quick info</h2>
+        <h2>Quick links</h2>
         <ul class="list">
-          <li class="item">
-            <strong>Contact</strong>
-            <span>
-              <a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a><br/>
-              <a href="tel:+12142706884">(214) 270-6884</a> • <a href="sms:+12142706884">Text</a>
-            </span>
-          </li>
           <li class="item">
             <strong>Social</strong>
             <span>
@@ -82,12 +123,17 @@
               <a href="#" title="Add your Instagram URL here">Instagram (placeholder)</a>
             </span>
           </li>
+          <li class="item">
+            <strong>Contact</strong>
+            <span>
+              <a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a><br/>
+              <a href="tel:+12142706884">(214) 270-6884</a> • <a href="sms:+12142706884">Text</a>
+            </span>
+          </li>
         </ul>
-
         <hr class="hr"/>
-
-        <p class="muted" style="margin:0;">
-          This site is a clean overview—like LinkedIn, but personal. If you want to collaborate or need help, reach out.
+        <p class="sub" style="margin:0;">
+          This site is a clean overview—like LinkedIn, but personal. Minimal design, real info.
         </p>
       </aside>
     </div>
@@ -95,8 +141,9 @@
     <div class="footer">
       <div>© <span id="y"></span> Victor Licona</div>
       <div class="smalllinks">
-        <a href="./contact.html">Contact</a>
         <a href="./work.html">Work</a>
+        <a href="./goals.html">Goals</a>
+        <a href="./contact.html">Contact</a>
       </div>
     </div>
   </div>
