--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Victor Licona</title>
-  <meta name="description" content="Victor Licona — personal site: roles, goals, skills, and contact." />
+  <meta name="description" content="Victor Licona — cybersecurity-focused student, Best Buy Certified Apple Computing Advisor, founder of TechBuddy by Victor." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div class="container">
-    <nav class="nav">
+    <nav class="nav fadeIn">
       <div class="brand">
         <strong>Victor Licona</strong>
-        <span>Personal HQ • Fort Worth, TX</span>
+        <span>Personal website • Fort Worth, TX</span>
       </div>
       <div class="links">
         <a class="active" href="./index.html">Home</a>
@@ -23,124 +23,100 @@
       </div>
     </nav>
 
-    <section class="hero">
-      <div class="heroTop">
-        <div class="profileRow">
-          <div class="avatar" title="Profile photo placeholder">VL</div>
+    <section class="hero fadeIn">
+      <div class="heroInner">
+        <div class="spark"></div>
 
-          <div>
-            <h1 class="h1">Victor Licona</h1>
+        <div class="heroTop">
+          <div class="titleWrap">
+            <h1 class="h1">Building skills, systems, and businesses.</h1>
             <p class="sub">
-              Student (Cybersecurity) • Best Buy <b>Certified Apple Computing Advisor</b> •
-              Founder/Owner/Operator of <b>TechBuddy by Victor</b> (one-person company)
+              I’m Victor — a <b>cybersecurity-focused student</b>, a Best Buy <b>Certified Apple Computing Advisor</b>,
+              and the <b>founder/owner/operator</b> of <b>TechBuddy by Victor</b> (one-person company).
             </p>
 
-            <div class="metaRow">
-              <div class="pill">
-                <svg class="ico" viewBox="0 0 24 24" fill="none">
-                  <path d="M12 21s7-4.4 7-11a7 7 0 1 0-14 0c0 6.6 7 11 7 11Z" stroke="currentColor" stroke-width="2"/>
-                  <path d="M12 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z" stroke="currentColor" stroke-width="2"/>
-                </svg>
-                Fort Worth, TX
-              </div>
-              <div class="pill">
-                <svg class="ico" viewBox="0 0 24 24" fill="none">
-                  <path d="M4 7h16M4 12h16M4 17h10" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                </svg>
-                Bilingual (EN/ES)
-              </div>
-              <div class="pill">
-                <svg class="ico" viewBox="0 0 24 24" fill="none">
-                  <path d="M4 12l5 5L20 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                Security-minded & detail-oriented
-              </div>
+            <div class="tags">
+              <div class="tag">Cybersecurity path (TCC → certifications)</div>
+              <div class="tag">Tech support & troubleshooting</div>
+              <div class="tag">Media + livestream production</div>
+              <div class="tag">Bilingual (EN/ES)</div>
             </div>
+
+            <div class="btnRow">
+              <a class="btn primary" href="./work.html">Explore my work</a>
+              <a class="btn green" href="mailto:contact@victorlicona.com">Email: contact@victorlicona.com</a>
+              <a class="btn" href="sms:+12142706884">Text: (214) 270-6884</a>
+              <a class="btn" href="./contact.html">Contact page</a>
+            </div>
+          </div>
+
+          <div class="cta">
+            <a class="btn" href="#" title="Replace # with your LinkedIn URL">LinkedIn (placeholder)</a>
+            <a class="btn" href="#" title="Replace # with your Instagram URL">Instagram (placeholder)</a>
+            <a class="btn" href="tel:+12142706884">Call: (214) 270-6884</a>
           </div>
         </div>
       </div>
-
-      <div class="btnrow">
-        <a class="btn primary" href="./work.html">
-          <svg class="ico" viewBox="0 0 24 24" fill="none">
-            <path d="M3 7h18v12H3V7Z" stroke="currentColor" stroke-width="2"/>
-            <path d="M8 7V5h8v2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          </svg>
-          What I do
-        </a>
-
-        <a class="btn" href="./about.html">
-          <svg class="ico" viewBox="0 0 24 24" fill="none">
-            <path d="M12 12a4 4 0 1 0-4-4 4 4 0 0 0 4 4Z" stroke="currentColor" stroke-width="2"/>
-            <path d="M4 20a8 8 0 0 1 16 0" stroke="currentColor" stroke-width="2"/>
-          </svg>
-          About
-        </a>
-
-        <a class="btn" href="mailto:contact@victorlicona.com">
-          <svg class="ico" viewBox="0 0 24 24" fill="none">
-            <path d="M4 6h16v12H4V6Z" stroke="currentColor" stroke-width="2"/>
-            <path d="M4 7l8 6 8-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          </svg>
-          contact@victorlicona.com
-        </a>
-
-        <a class="btn" href="sms:+12142706884">
-          <svg class="ico" viewBox="0 0 24 24" fill="none">
-            <path d="M21 14a4 4 0 0 1-4 4H8l-5 3V6a4 4 0 0 1 4-4h10a4 4 0 0 1 4 4v8Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
-          </svg>
-          Text: (214) 270-6884
-        </a>
-      </div>
     </section>
 
-    <div class="grid">
+    <div class="grid fadeIn">
       <section class="card">
-        <h2>Top 3 skills</h2>
+        <h2>Top strengths</h2>
         <ul class="list">
           <li class="item">
             <strong>Technical troubleshooting & systems thinking</strong>
-            <span>Fast diagnosis, root-cause mindset, and clean repeatable fixes.</span>
+            <span>Root-cause mindset + repeatable fixes. I build setups that stay reliable.</span>
           </li>
           <li class="item">
             <strong>Clear communication & customer trust (EN/ES)</strong>
-            <span>I translate complexity into simple steps people can follow.</span>
+            <span>I explain tech in plain language and keep people confident through the process.</span>
           </li>
           <li class="item">
             <strong>Security-minded problem solving</strong>
-            <span>Safer setups, scam awareness, privacy-first habits, and smart defaults.</span>
+            <span>Cybersecurity mindset: safer defaults, scam awareness, privacy-first habits.</span>
           </li>
         </ul>
+
+        <hr class="hr"/>
+
+        <div class="twoCol">
+          <div class="kpi">
+            <div class="k">Best Buy</div>
+            <div class="v">Certified Apple Computing Advisor</div>
+          </div>
+          <div class="kpi">
+            <div class="k">Business</div>
+            <div class="v">TechBuddy by Victor (Founder)</div>
+          </div>
+        </div>
       </section>
 
       <aside class="card">
-        <h2>Quick links</h2>
+        <h2>Snapshot</h2>
         <ul class="list">
           <li class="item">
-            <strong>Social</strong>
-            <span>
-              <a href="#" title="Add your LinkedIn URL here">LinkedIn (placeholder)</a><br/>
-              <a href="#" title="Add your Instagram URL here">Instagram (placeholder)</a>
-            </span>
+            <strong>What I’m working on</strong>
+            <span>Cybersecurity skills, TechBuddy growth, and reliable media workflows.</span>
           </li>
           <li class="item">
-            <strong>Contact</strong>
+            <strong>What I’m open to</strong>
+            <span>Collaborations, paid work, and opportunities that build real experience.</span>
+          </li>
+          <li class="item">
+            <strong>Fast contact</strong>
             <span>
               <a href="mailto:contact@victorlicona.com">contact@victorlicona.com</a><br/>
-              <a href="tel:+12142706884">(214) 270-6884</a> • <a href="sms:+12142706884">Text</a>
+              <a href="sms:+12142706884">Text (214) 270-6884</a>
             </span>
           </li>
         </ul>
-        <hr class="hr"/>
-        <p class="sub" style="margin:0;">
-          This site is a clean overview—like LinkedIn, but personal. Minimal design, real info.
-        </p>
       </aside>
     </div>
 
-    <div class="footer">
+    <div class="footer fadeIn">
       <div>© <span id="y"></span> Victor Licona</div>
       <div class="smalllinks">
+        <a href="./about.html">About</a>
         <a href="./work.html">Work</a>
         <a href="./goals.html">Goals</a>
         <a href="./contact.html">Contact</a>
